cluster/services/reddit/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/instance: reddit
    app.kubernetes.io/name: reddit
    app.kubernetes.io/version: latest
  name: reddit
  namespace: services
spec:
  ingressClassName: nginx
  rules:
    - host: reddit.bth.wtf
      http:
        paths:
          - backend:
              service:
                name: reddit
                port:
                  number: 8080
            path: /
            pathType: Prefix
